Enlace salud con BEM en SASS

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Blog de canes y humanos</title> 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,17 +27,17 @@
         <div class="mainPrincipal">
             <article class="ultimapubli">
                 <a href="paginas/ultimapubli.html"><h3>ultima publicacion</h3></a>
-                <p class="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est illo ex reiciendis sapiente velit quo vero nisi, id officia quis sit maiores magni libero eos veritatis eius et expedita magnam?</p>
+                <div><p class="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est illo ex reiciendis sapiente velit quo vero nisi, id officia quis sit maiores magni libero eos veritatis eius et expedita magnam?</p></div>
                 <img class="img1" src="./imagenes/publicacion.jpg">
             </article>
             <article class="lugares">
                 <a href="praginas/lugaresparavisitar.html"><h3>lugares para visitar</h3></a>
-                <p class="texto2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod odit eius est. Alias eum similique odit commodi error quibusdam, optio laudantium assumenda! Accusantium pariatur soluta doloremque eum!</p>
+                <div><p class="texto2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod odit eius est. Alias eum similique odit commodi error quibusdam, optio laudantium assumenda! Accusantium pariatur soluta doloremque eum!</p></div>
                 <img class="img2" src="./imagenes/lugar.jpg">
             </article>
             <aside class="publicacion"><h3>publicaciones likeadas de otra plataforma</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis consequatur molestiae quas perferendis dolore! Delectus eos magnam necessitatibus aliquam quas repellat eum facilis commodi deleniti, ullam enim voluptatum nisi quasi.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora totam deleniti laborum reiciendis, esse nulla beatae eos quas fuga error dignissimos voluptate culpa suscipit ipsam illum dolorem, vel consectetur aliquid?</p>
+                <div><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis consequatur molestiae quas perferendis dolore! Delectus eos magnam necessitatibus aliquam quas repellat eum facilis commodi deleniti, ullam enim voluptatum nisi quasi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora totam deleniti laborum reiciendis, esse nulla beatae eos quas fuga error dignissimos voluptate culpa suscipit ipsam illum dolorem, vel consectetur aliquid?</p></div>
             </aside>
         </div>
     </main>
