--- a/paginas/salud.html
+++ b/paginas/salud.html
@@ -3,8 +3,10 @@
 <head>
     <title>Blog de canes y humanos</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -24,7 +26,90 @@
 </header>
 <main class="saludimg">
 <!--notas sobre salud-->
-    </main>
+
+<div  class="notassalud">
+    <div class="contenedor">
+        <div class="card__header">
+          <figure class="card__figure">
+            <img class="card__image" src="../imagenes/cachorronegro.jpg" alt="">
+          </figure>
+        </div>
+        <div class="card__body">
+          <h2 class="card__titulo">Los primeros días de tu perro o cachorro en casa</h2>
+          <h3 class="card__intro">
+            La llegada de un cachorro es un acontecimiento muy emocionante para toda la familia. Pero antes de llevar a un nuevo perro a casa, es fundamental que acondiciones tu hogar para facilitar la adaptación de tu pequeño peludo a su nuevo entorno. Hoy te explicamos cómo prepararte para que los primeros días de un cachorro en casa sean todo un éxito. 
+          </h3>
+        </div>
+        <footer class="card__footer">
+          <div>
+            <button class="button" a href="#">
+              Seguir leyendo...
+            </button>
+          </div>
+        </footer>
+    </div>
+    <div class="contenedor">
+      <div class="card__header">
+        <figure class="card__figure">
+          <img class="card__image" src="../imagenes/veterinaria.PNG" alt="">
+        </figure>
+      </div>
+      <div class="card__body">
+        <h2 class="card__titulo">La visita al veterinario</h2>
+        <h3 class="card__intro">Hacer que la visita  sea divertida y positiva. ¿Cómo se consigue que a tu perro le guste el veterinario?</h3>
+      </div>
+      <footer class="card__footer">
+        <div>
+          <button class="button" a href="#">
+            Seguir leyendo...
+          </button>
+        </div>
+      </footer>
+    </div>
+    <div class="contenedor">
+      <div class="card__header">
+        <figure class="card__figure">
+          <img class="card__image" src="../imagenes/cachorro.jpg" alt="">
+        </figure>
+      </div>
+      <div class="card__body">
+        <h2 class="card__titulo">Cómo presentar al nuevo perro la resto de la manada</h2>
+        <h3 class="card__intro">
+          Respetar el espacio y tiempo - Presenta a tus perros en la calle - Esconde todos los puntos de conflicto
+        </h3>
+      </div>
+      <footer class="card__footer">
+        <div>
+          <button class="button" a href="#">
+            Seguir leyendo...
+          </button>
+        </div>
+      </footer>
+    </div>
+    <div class="contenedor">
+      <div class="card__header">
+        <figure class="card__figure">
+          <img class="card__image" src="../imagenes/cachorrocama.jpg" alt="">
+        </figure>
+      </div>
+      <div class="card__body">
+        <h2 class="card__titulo">CASA: Lugar seguro para tu cachorro/perro</h2>
+        <h3 class="card__intro">
+          Tu casa tiene que ser el lugar donde tu perro /cachorro se sienta más seguro del mundo mundial. Ese lugar donde pueda dormir a pierna suelta sin importarle nada .
+    Para conseguir eso debe ser real. Es decir, debe poder estar tranquilo en un lugar especial para él: su cuna, transportín … Debe entender todo lo que pasa a su alrededor.
+        </h3>
+      </div>
+      <footer class="card__footer">
+        <div>
+          <button class="button" a href="#">
+            Seguir leyendo...
+          </button>
+        </div>
+      </footer>
+    </div>
+
+</div>
+</main>
 <footer>comentarios de visitas: Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.</footer>
 
 </body>
