Agregado de Extend y Mixins en Agenda

--- a/paginas/salud.html
+++ b/paginas/salud.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Blog de canes y humanos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,16 +14,16 @@
 <header>
      <!-- menu en lista como pide la entrega-->   
      <nav>
-        <ul class="hola">
-            <li class="liMenu"><a href="manos_a_la_obra.html">Manos a la obra</a></li>
-            <li class="liMenu"><a href="conocenos.html">Conocenos</a></li>
-            <li class="liMenu"><a href="productos.html">Productos</a></li>  
-            <li class="liMenu"><a href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
-            <li class="liMenu"><a href="agenda.html">Agenda</a></li>
-            <li class="liMenu"><a href="salud.html">Salud</a></li>
-            <li class="liMenu"><a href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
-        </ul>
-    </nav>
+      <ul class="hola">
+          <li class="liMenu"><a class="linkcolor" href="manos_a_la_obra.html">Manos a la obra</a></li>
+          <li class="liMenu"><a class="linkcolor" href="conocenos.html">Conocenos</a></li>
+          <li class="liMenu"><a class="linkcolor" href="productos.html">Productos</a></li>  
+          <li class="liMenu"><a class="linkcolor" href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
+          <li class="liMenu"><a class="linkcolor" href="agenda.html">Agenda</a></li>
+          <li class="liMenu"><a class="linkcolor" href="salud.html">Salud</a></li>
+          <li class="liMenu"><a class="linkcolor" href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
+      </ul>
+  </nav>
     <h1>Notas de salud</h1>
 </header>
 <main class="saludimg">
@@ -36,9 +38,9 @@
         </div>
         <div class="card__body">
           <h2 class="card__titulo">Los primeros días de tu perro o cachorro en casa</h2>
-          <h3 class="card__intro">
+          <h4 class="card__intro">
             La llegada de un cachorro es un acontecimiento muy emocionante para toda la familia. Pero antes de llevar a un nuevo perro a casa, es fundamental que acondiciones tu hogar para facilitar la adaptación de tu pequeño peludo a su nuevo entorno. Hoy te explicamos cómo prepararte para que los primeros días de un cachorro en casa sean todo un éxito. 
-          </h3>
+          </h4>
         </div>
         <footer class="card__footer">
           <div>
@@ -56,7 +58,7 @@
       </div>
       <div class="card__body">
         <h2 class="card__titulo">La visita al veterinario</h2>
-        <h3 class="card__intro">Hacer que la visita  sea divertida y positiva. ¿Cómo se consigue que a tu perro le guste el veterinario?</h3>
+        <h4 class="card__intro">Hacer que la visita  sea divertida y positiva. ¿Cómo se consigue que a tu perro le guste el veterinario?</h4>
       </div>
       <footer class="card__footer">
         <div>
@@ -74,9 +76,9 @@
       </div>
       <div class="card__body">
         <h2 class="card__titulo">Cómo presentar al nuevo perro la resto de la manada</h2>
-        <h3 class="card__intro">
+        <h4 class="card__intro">
           Respetar el espacio y tiempo - Presenta a tus perros en la calle - Esconde todos los puntos de conflicto
-        </h3>
+        </h4>
       </div>
       <footer class="card__footer">
         <div>
@@ -94,10 +96,10 @@
       </div>
       <div class="card__body">
         <h2 class="card__titulo">CASA: Lugar seguro para tu cachorro/perro</h2>
-        <h3 class="card__intro">
+        <h4 class="card__intro">
           Tu casa tiene que ser el lugar donde tu perro /cachorro se sienta más seguro del mundo mundial. Ese lugar donde pueda dormir a pierna suelta sin importarle nada .
     Para conseguir eso debe ser real. Es decir, debe poder estar tranquilo en un lugar especial para él: su cuna, transportín … Debe entender todo lo que pasa a su alrededor.
-        </h3>
+        </h4>
       </div>
       <footer class="card__footer">
         <div>
