--- a/paginas/agenda.html
+++ b/paginas/agenda.html
@@ -2,28 +2,36 @@
 <html lang="en">
 <head>
     <title>Blog de canes y humanos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body> 
     <header>
             <!-- menu en lista como pide la entrega-->   
             <nav>
                 <ul class="hola">
-                    <li class="liMenu"><a href="manos_a_la_obra.html">Manos a la obra</a></li>
-                    <li class="liMenu"><a href="conocenos.html">Conocenos</a></li>
-                    <li class="liMenu"><a href="productos.html">Productos</a></li>  
-                    <li class="liMenu"><a href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
-                    <li class="liMenu"><a href="agenda.html">Agenda</a></li>
-                    <li class="liMenu"><a href="salud.html">Salud</a></li>
-                    <li class="liMenu"><a href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
+                    <li class="liMenu"><a class="linkcolor" href="manos_a_la_obra.html">Manos a la obra</a></li>
+                    <li class="liMenu"><a class="linkcolor" href="conocenos.html">Conocenos</a></li>
+                    <li class="liMenu"><a class="linkcolor" href="productos.html">Productos</a></li>  
+                    <li class="liMenu"><a class="linkcolor" href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
+                    <li class="liMenu"><a class="linkcolor" href="agenda.html">Agenda</a></li>
+                    <li class="liMenu"><a class="linkcolor" href="salud.html">Salud</a></li>
+                    <li class="liMenu"><a class="linkcolor" href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
                 </ul>
             </nav>
         <h1>Agenda</h1>
             <h2>Volcaremos un listado de profesionales en distintas especialidades para nuestros peludos</h2>
     </header>
-    <main class="agendaimg"> 
+    <main> 
+       <div>
+            <input class="textobusqueda--estilo" type="search" placeholder="Filtrar">
+            <button class="boton-estilo" type="submit">Buscar</button>
+       </div> 
     <table class="tablaagenda">  
         <tr>  
             <th>Especialidad</th>   
@@ -34,32 +42,33 @@
             <th>Pais</th>    
         </tr> 
         <tr>  
-            <td>Fila 2 - Columna 1</td>   
-            <td>Fila 2 - Columna 2</td>   
-            <td>Fila 2 - Columna 3</td>  
-            <td>Fila 2 - Columna 4</td>   
-            <td>Fila 2 - Columna 5</td>   
-            <td>Fila 2 - Columna 6</td>
+            <td class="td1">Fila 2 - Columna 1</td>   
+            <td class="td2">Fila 2 - Columna 2</td>   
+            <td class="td3">Fila 2 - Columna 3</td>  
+            <td class="td4">Fila 2 - Columna 4</td>   
+            <td class="td5">Fila 2 - Columna 5</td>   
+            <td class="td6">Fila 2 - Columna 6</td>
         </tr>
         <tr>  
-            <td>Fila 3 - Columna 1</td>   
-            <td>Fila 3 - Columna 2</td>   
-            <td>Fila 3 - Columna 3</td>  
-            <td>Fila 3 - Columna 4</td>   
-            <td>Fila 3 - Columna 5</td>   
-            <td>Fila 3 - Columna 6</td>
+            <td class="td1">Fila 3 - Columna 1</td>   
+            <td class="td2">Fila 3 - Columna 2</td>   
+            <td class="td3">Fila 3 - Columna 3</td>  
+            <td class="td4">Fila 3 - Columna 4</td>   
+            <td class="td5">Fila 3 - Columna 5</td>   
+            <td class="td6">Fila 3 - Columna 6</td>
         </tr>
         <tr>  
-            <td>Fila 4 - Columna 1</td>   
-            <td>Fila 4 - Columna 2</td>   
-            <td>Fila 4 - Columna 3</td>  
-            <td>Fila 4 - Columna 4</td>   
-            <td>Fila 4 - Columna 5</td>   
-            <td>Fila 4 - Columna 6</td>
+            <td class="td1">Fila 4 - Columna 1</td>   
+            <td class="td2">Fila 4 - Columna 2</td>   
+            <td class="td3">Fila 4 - Columna 3</td>  
+            <td class="td4">Fila 4 - Columna 4</td>   
+            <td class="td5">Fila 4 - Columna 5</td>   
+            <td class="td6">Fila 4 - Columna 6</td>
         </tr>
     </table>
     </main>
-    <footer>comentarios de visitas: Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.</footer>
-
+    <footer>Comentarios de visitas:<br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.
+    </footer>
 </body>
 </html>
