--- a/paginas/conocenos.html
+++ b/paginas/conocenos.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Blog de canes y humanos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pacifico&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -11,13 +13,13 @@
         <!-- menu en lista como pide la entrega-->   
         <nav>
             <ul class="hola">
-                <li class="liMenu"><a href="manos_a_la_obra.html">Manos a la obra</a></li>
-                <li class="liMenu"><a href="conocenos.html">Conocenos</a></li>
-                <li class="liMenu"><a href="productos.html">Productos</a></li>  
-                <li class="liMenu"><a href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
-                <li class="liMenu"><a href="agenda.html">Agenda</a></li>
-                <li class="liMenu"><a href="salud.html">Salud</a></li>
-                <li class="liMenu"><a href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
+                <li class="liMenu"><a class="linkcolor" href="manos_a_la_obra.html">Manos a la obra</a></li>
+                <li class="liMenu"><a class="linkcolor" href="conocenos.html">Conocenos</a></li>
+                <li class="liMenu"><a class="linkcolor" href="productos.html">Productos</a></li>  
+                <li class="liMenu"><a class="linkcolor" href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
+                <li class="liMenu"><a class="linkcolor" href="agenda.html">Agenda</a></li>
+                <li class="liMenu"><a class="linkcolor" href="salud.html">Salud</a></li>
+                <li class="liMenu"><a class="linkcolor" href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
             </ul>
         </nav>
     <h1>Conocenos</h1>
@@ -84,7 +86,8 @@
         </ul>
         <div class="todos"></div>
 </main>
-<footer>comentarios de visitas: Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.</footer>
-
+<footer>Comentarios de visitas:<br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.
+</footer>
 </body>
 </html>
