--- a/paginas/publicamosemprendi.html
+++ b/paginas/publicamosemprendi.html
@@ -14,13 +14,13 @@
          <!-- menu en lista como pide la entrega-->   
          <nav>
             <ul class="hola">
-                <li class="liMenu"><a href="manos_a_la_obra.html">Manos a la obra</a></li>
-                <li class="liMenu"><a href="conocenos.html">Conocenos</a></li>
-                <li class="liMenu"><a href="productos.html">Productos</a></li>  
-                <li class="liMenu"><a href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
-                <li class="liMenu"><a href="agenda.html">Agenda</a></li>
-                <li class="liMenu"><a href="salud.html">Salud</a></li>
-                <li class="liMenu"><a href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
+                <li class="liMenu"><a class="linkcolor" href="manos_a_la_obra.html">Manos a la obra</a></li>
+                <li class="liMenu"><a class="linkcolor" href="conocenos.html">Conocenos</a></li>
+                <li class="liMenu"><a class="linkcolor" href="productos.html">Productos</a></li>  
+                <li class="liMenu"><a class="linkcolor" href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
+                <li class="liMenu"><a class="linkcolor" href="agenda.html">Agenda</a></li>
+                <li class="liMenu"><a class="linkcolor" href="salud.html">Salud</a></li>
+                <li class="liMenu"><a class="linkcolor" href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
             </ul>
         </nav>
     </header>    
@@ -62,7 +62,8 @@
         <button type="submit" class="btn btn-outline-primary">Enviar Formulario</button>
         <button type="reset" class="btn btn-outline-primary">Resetear Formulario</button>
     </form>
-    <footer>comentarios de visitas: Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.</footer>
-
+    <footer>Comentarios de visitas:<br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.
+    </footer>
 </body>
 </html>
