--- a/paginas/ultimapubli.html
+++ b/paginas/ultimapubli.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <title>Blog de canes y humanos</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description"
+    content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
+    <meta name="keywords"
+    content="perro,perrito,dog,pet,mascota,juguete,toy,jugar,play,ponchito,abrigo,pasear,salud,casero,natural,primera,veterinario,comida,aprender,enseñar,castracion">
+    <link rel="stylesheet" href="css/style.css">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
+</head>
     <!-- cree el html para el enlace pero en realidad lo que
         voy a querer que muestre es la publicacion mas reciente de
         salud, o producto o manos a la obra-->
