--- a/paginas/ultimapubli.html
+++ b/paginas/ultimapubli.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description"
-    content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
+    <meta name="description"content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
     <meta name="keywords"
     content="perro,perrito,dog,pet,mascota,juguete,toy,jugar,play,ponchito,abrigo,pasear,salud,casero,natural,primera,veterinario,comida,aprender,enseñar,castracion">
     <link rel="stylesheet" href="css/style.css">   
