--- a/paginas/conocenos.html
+++ b/paginas/conocenos.html
@@ -1,101 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Blog de canes y humanos</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-    content="informacion sobre perros y humanos">
-    <meta name="keywords"
-    content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <!-- menu en lista como pide la entrega-->   
-        <nav>
-            <ul class="hola">
-                <li class="liMenu"><a class="linkcolor" href="manos_a_la_obra.html">Manos a la obra</a></li>
-                <li class="liMenu"><a class="linkcolor" href="conocenos.html">Conocenos</a></li>
-                <li class="liMenu"><a class="linkcolor" href="productos.html">Productos</a></li>  
-                <li class="liMenu"><a class="linkcolor" href="../index.html"><img class="logo" src="../imagenes/canesyhumanos.jpg" alt="logo"></a></li>
-                <li class="liMenu"><a class="linkcolor" href="agenda.html">Agenda</a></li>
-                <li class="liMenu"><a class="linkcolor" href="salud.html">Salud</a></li>
-                <li class="liMenu"><a class="linkcolor" href="publicamosemprendi.html">Publicamos tu emprendimiento</a></li>
-            </ul>
-        </nav>
-    <h1>Conocenos</h1>
-        <h2>Este es el Team detras de la pagina. Un grupo de Surtidos Bagley, Reciclados, Mil porciento guapos.</h2>
-        <p>(Tipo, Nombre, Edad, Descripcion, Superheroe, Muggle)</p>
-    </header>
-<main>
-    <div class="tablaconocenos">  
-        <ul class="hum1">  
-            <li>Humano1</li>   
-            <li>Fila 2 - Columna 2</li>   
-            <li>Fila 2 - Columna 3</li>  
-            <li>Fila 2 - Columna 4</li>   
-            <li>Fila 2 - Columna 5</li>   
-            <li>Fila 2 - Columna 6</li>
-        </ul>
-        <ul class="hum2">  
-            <li>Humano2</li>   
-            <li>Fila 3 - Columna 2</li>   
-            <li>Fila 3 - Columna 3</li>  
-            <li>Fila 3 - Columna 4</li>   
-            <li>Fila 3 - Columna 5</li>   
-            <li>Fila 3 - Columna 6</li>
-        </ul>
-        <ul class="can1">  
-            <li>Can1</li>   
-            <li>Fila 4 - Columna 2</li>   
-            <li>Fila 4 - Columna 3</li>  
-            <li>Fila 4 - Columna 4</li>   
-            <li>Fila 4 - Columna 5</li>   
-            <li>Fila 4 - Columna 6</li>
-        </ul>
-        <ul class="can2">  
-            <li>Can2</li>   
-            <li>Fila 5 - Columna 2</li>   
-            <li>Fila 5 - Columna 3</li>  
-            <li>Fila 5 - Columna 4</li>   
-            <li>Fila 2 - Columna 5</li>   
-            <li>Fila 5 - Columna 6</li>
-        </ul>
-        <ul class="can3">  
-            <li>Can3</li>   
-            <li>Fila 6 - Columna 2</li>   
-            <li>Fila 6 - Columna 3</li>  
-            <li>Fila 6 - Columna 4</li>   
-            <li>Fila 6 - Columna 5</li>   
-            <li>Fila 6 - Columna 6</li>
-        </ul>
-        <ul class="can4">  
-            <li>Can4</li>   
-            <li>Fila 7 - Columna 2</li>   
-            <li>Fila 7 - Columna 3</li>  
-            <li>Fila 7 - Columna 4</li>   
-            <li>Fila 7 - Columna 5</li>   
-            <li>Fila 7 - Columna 6</li>
-        </ul>
-        <ul class="can5">  
-            <li>Can5</li>   
-            <li>Fila 8 - Columna 2</li>   
-            <li>Fila 8 - Columna 3</li>  
-            <li>Fila 8 - Columna 4</li>   
-            <li>Fila 8 - Columna 5</li>   
-            <li>Fila 8 - Columna 6</li>
-        </ul>
-        <div class="todos"></div>
-</main>
-<footer>Comentarios de visitas:<br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>nesciunt quae praesentium placeat beatae voluptates saepe cupiditate reiciendis aspernatur quod sed voluptas nemo reprehenderit molestiae alias, necessitatibus, est nulla odio.
-</footer>
-</body>
+    <head>
+        <title>Blog de canes y humanos</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" >
+        <meta name="description"
+        content="informacion sobre perros y humanos">
+        <meta name="keywords"
+        content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+                <div class="container justify-content-center">
+                    <a class="navbar-brand" href="../index.html"><img src="../imagenes/canesyhumanos.jpg" alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav nav-width justify-content-between text-center hola">
+                            <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                            <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
+                            <a class="limenu nav-link" href="productos.html">Productos</a>
+                            <a class="limenu nav-link" href="agenda.html">Agenda</a>
+                            <a class="limenu nav-link" href="salud.html">Salud</a>
+                            <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <h1>Conocenos</h1>
+            <h2>Este es el Team detras de la pagina. Un grupo de Surtidos Bagley, Reciclados, Mil porciento guapos.</h2>
+            <p>(Tipo, Nombre, Edad, Descripcion, Superpoder, Muggle)</p>
+        </header>
+        <main>
+            <div class="tablaconocenos tablaconocenos-media">  
+                <div><ul class="hum1">  
+                    <li id="subrayadocolor">HUMANO 1</li>   
+                    <li>PABLO</li>   
+                    <li>+30</li>  
+                    <li>Padre, Tranquilo, Responsable, Inversor</li>   
+                    <li>Aficionado al cafe</li>   
+                    <li>Mestizo</li>
+                </ul></div>
+                <div><ul class="hum2">  
+                    <li id="subrayadocolor">HUMANO 2</li>   
+                    <li>ELIANA</li>   
+                    <li>+30</li>  
+                    <li>Madre, Inquieta, Responsable, Organizada</li>   
+                    <li>Hincha pelotas</li>   
+                    <li>Mestiza</li>
+                </ul></div>
+                <div><ul class="can1">  
+                    <li id="subrayadocolor">CAN 1</li>   
+                    <li>THEO</li>   
+                    <li>11 años aprox.</li>  
+                    <li>Apaciguador, Protector, Mimoso</li>   
+                    <li>Elder</li>   
+                    <li>Mestizo</li>
+                </ul></div>
+                <div><ul class="can2">  
+                    <li id="subrayadocolor">CAN 2</li>   
+                    <li>SAKURA</li>   
+                    <li>4 años</li>  
+                    <li>Alegre, Inquieta, Jugetona</li>   
+                    <li>Acumuladora de juguetes</li>   
+                    <li>Mestiza</li>
+                </ul></div>
+                <div><ul class="can3">  
+                    <li id="subrayadocolor">CAN 3</li>   
+                    <li>LUNA</li>   
+                    <li>4 años aprox.</li>  
+                    <li>Celosa, Mimosa, Cantante</li>   
+                    <li>Rastreadora de palitos</li>   
+                    <li>Mestiza</li>
+                </ul></div>
+                <div><ul class="can4">  
+                    <li id="subrayadocolor">CAN 4</li>   
+                    <li>RAMIRO</li>   
+                    <li>4 años aprox.</li>  
+                    <li>Inseguro, Mimoso, Muy Ramiro</li>   
+                    <li>Memorioso por excelencia</li>   
+                    <li>Mestizo</li>
+                </ul></div>
+                <div><ul class="can5">  
+                    <li id="subrayadocolor">CAN 5</li>   
+                    <li>MORA</li>   
+                    <li>2 años</li>  
+                    <li>Juguetona, Activa, Pegote</li>   
+                    <li>Alarma detectora de alimento</li>   
+                    <li>Mestiza</li>
+                </ul></div>
+            <div class="todos"></div>
+        </main>
+        <footer role="contentinfo">
+            <div class="row">
+                <div class="col-md-4"><img src="../imagenes/logodog.png" alt="usuario de perro">
+                </div>
+                <div class="col-md-4">
+                    <p>Comentarios de visitas:<br>TU COMENTARIO ES MUY IMPORTANTE PARA NOSOTROS<br>CANES Y HUMANOS</p>
+                </div>
+                <div class="col-md-4">
+                    <a target="_blank" class="linkcolor"rel="noopener noreferrer" href="http://instagram.com/los.mestizos.salgueiro"><img src="../imagenes/instagram_logo_icon_124339.png" alt="Seguinos en Instagram">Seguinos en Instagram</a>		    
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
